[package]
authors = ["Michael Baykov <manpacket@gmail.com>"]
description = "Hierarchical token bucket implementation"
edition = "2021"
license = "MIT OR Apache-2.0"
name = "htb"
repository = "https://github.com/pacak/htb-rs"
version = "0.2.3"
categories = ["algorithms", "network-programming", "concurrency"]
keywords = ["rate-limiting", "rate-limit", "htb", "token-bucket"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
borsh = { version = "1.2.0", optional = true, default-features = false, features = ["derive"] }
gcd = "2.1.0"
serde = { version = "1.0.147", optional = true, features = ["derive"] }
